feat(blog): add shields credits, fix credits links improve blogpost feat(BlogImage): add title tooltip in BlogImage

--- a/src/pages/projects/polimeet.mdx
+++ b/src/pages/projects/polimeet.mdx
@@ -3,7 +3,7 @@ title: "How we accidentally made a dating app for our University Campus."
 layout: "@layouts/blogLayout.astro"
 date: "2024-10-22"
 description: "We didn't expect this social experiment to go this far."
-tags: ["Telegram Bot", "Social Experiment"]
+tags: ["Bots", "Social Experiment"]
 published: true
 ---
 import CodeBlock from '@components/CodeBlock.astro';
@@ -22,7 +22,7 @@ import { Image } from 'astro:assets';
 
 ![A version of the sticker we put in bathrooms.](@assets/blog/polimeet/banner.png)
 
-Two years ago, a couple of friends and I from university decided to start PoliMeet. What began as a small side project evolved into something much bigger—a sort of anonymous dating app for our university campus. This is the story of how that happened.
+Two years ago, a couple of friends and I from university decided to start PoliMeet. What began as a small side project evolved into something much bigger — a sort of anonymous dating app for our university campus. This is the story of how that happened.
 
 ![The logo we used for the project.](@assets/blog/polimeet/logo32.jpg)
 
@@ -44,7 +44,7 @@ I initially handled the backend development for the Telegram bot, with my friend
 
 Users could access the bot and specify details like their gender, university campus (we have several across Lombardy), study program, and interests. This info wasn’t used for matching; instead, it gave the matched person a brief bio of who they were talking to.
 
-Once in the main menu, you could click “join” to enter a pool and be randomly matched with another user. The matching was entirely random, although we had plans for a feature where you could specify preferences—unfortunately, we never got that far.
+Once in the main menu, you could click “join” to enter a pool and be randomly matched with another user. The matching was entirely random, although we had plans for a feature where you could specify preferences — unfortunately, we never got that far.
 
 ![Getting matched.](@assets/blog/polimeet/match.png)
 
@@ -64,7 +64,7 @@ Other than these cases, all conversations remained anonymous. Messages weren’t
 
 After a few weeks of coding and skipping classes, the bot was almost ready to launch. However, disaster struck the morning we planned to go live.
 
-While on the train to university, I logged into the server to make a quick fix to a bug I had found the previous night. After making the changes, I logged off and went back to sleep. When I arrived at campus and tried to access the server again, the entire script had vanished. We didn’t use version control, nor did we have any backups—everything was lost.
+While on the train to university, I logged into the server to make a quick fix to a bug I had found the previous night. After making the changes, I logged off and went back to sleep. When I arrived at campus and tried to access the server again, the entire script had vanished. We didn’t use version control, nor did we have any backups — everything was lost.
 
 I desperately tried everything to recover the file, from looking for cached copies on my PC to instructing my mom on how to search my desktop at home. But it was all gone. This was a huge blow to me and my two friends, especially since we had a major Physics midterm the next day. Instead of studying, I worked tirelessly for the next 48 hours, rebuilding the bot from scratch.
 
@@ -74,7 +74,7 @@ In hindsight, the setback helped. Since I already had a clear picture of what th
 
 ## Launching PoliMeet: The Marketing Campaign
 
-When we were finally ready to launch, we decided to go all out with an advertising campaign. Anna, one of the team members, designed awesome flyers to be distributed around the campus. We placed them near vending machines, water dispensers, microwaves, bulletin boards—anywhere we thought students would notice.
+When we were finally ready to launch, we decided to go all out with an advertising campaign. Anna, one of the team members, designed awesome flyers to be distributed around the campus. We placed them near vending machines, water dispensers, microwaves, bulletin boards — anywhere we thought students would notice.
 
 ![The flyers.](@assets/blog/polimeet/micro2.png)
 
@@ -94,7 +94,7 @@ Once the flyers and stickers were up, we started seeing activity on the bot. Whi
 
 After a few days, our project caught the attention of a university association called PoliNetwork. Anna had shared the bot link in one of their large Telegram groups, and one of the admins reached out to her. 
 
-The three of us were invited to a discussion group where PoliNetwork members mentioned they’d had a similar idea—jokingly called "PoliTinder"—but we were the first to actually build something. They even offered to review our code and potentially integrate the bot with their network to make it a more widely-used service.
+The three of us were invited to a discussion group where PoliNetwork members mentioned they’d had a similar idea — jokingly called "PoliTinder" — but we were the first to actually build something. They even offered to review our code and potentially integrate the bot with their network to make it a more widely-used service.
 
 ---
 
@@ -107,5 +107,5 @@ What we take away from this experience is invaluable: the importance of version 
 PoliMeet may not have become the next big thing on campus, but it taught us some key lessons about teamwork, resilience, and the ups and downs of amateur projects.
 
 Other members involved:
-[**Jack**](https://google.com)
-[**Anna**](https://github.com/MettiFire)
+<Shield icon="mdi:github" url="https://github.com/agent-png">Jack</Shield>
+<Shield icon="skill-icons:linkedin" url="https://www.linkedin.com/in/anna-mettifogo-a37751292/">Anna</Shield>
