fix(blog): remove 1 dot in relative pathfile

--- a/src/pages/projects/twister.mdx
+++ b/src/pages/projects/twister.mdx
@@ -61,7 +61,7 @@ Next, I added a basic tutorial to set the premise of the game (yes, it was a wal
 I also created a login screen that led into the game, though it didn’t really serve a purpose beyond getting users familiar with the interface. I ended up scrapping the “About You” section because I couldn’t find a useful way to leverage it.
 
 <video controls class="w-full flex flex-row justify-center aspect-video">
-  <source src={import("../src/assets/blog/twister/logging in.mp4")} type="video/mp4" />
+  <source src={import("./src/assets/blog/twister/logging in.mp4")} type="video/mp4" />
 </ video>
 
 My final vision for the game included features like replying to comments, having persistent conversations with AI-generated repliers, DMs, and even “drama events” where you’d battle against specific users to affect your reputation. Unfortunately, with only one week to work on it, I had to scrap a lot of those ideas.
