--- a/src/pages/projects/twister.mdx
+++ b/src/pages/projects/twister.mdx
@@ -61,7 +61,7 @@ Next, I added a basic tutorial to set the premise of the game (yes, it was a wal
 I also created a login screen that led into the game, though it didn’t really serve a purpose beyond getting users familiar with the interface. I ended up scrapping the “About You” section because I couldn’t find a useful way to leverage it.
 
 <video controls class="w-full flex flex-row justify-center aspect-video">
-  <source src={import("./src/assets/blog/twister/logging in.mp4")} type="video/mp4" />
+  <source src={import("../src/assets/blog/twister/logging_in.mp4")} type="video/mp4" />
 </ video>
 
 My final vision for the game included features like replying to comments, having persistent conversations with AI-generated repliers, DMs, and even “drama events” where you’d battle against specific users to affect your reputation. Unfortunately, with only one week to work on it, I had to scrap a lot of those ideas.
@@ -95,7 +95,7 @@ To make the game more interactive, I added **AI-generated comments**. Depending 
 I also introduced a memory system. Commenters would remember your previous tweets, so if you apologized for something, the AI could gauge whether your apology was sincere. This led to some fun interactions where a truthful apology could reduce your controversy score.
 
 <video controls class="w-full flex flex-row justify-center aspect-video">
-  <source src="./src/assets/blog/twister/comments.mp4" type="video/mp4" />
+  <source src={import("./src/assets/blog/twister/comments.mp4")} type="video/mp4" />
 </ video>
 
 Next, I implemented a “followers” counter to give the game a clear goal. The idea was to **survive as long as possible** by maintaining your follower count. If your tweets were too tame, people would lose interest and unfollow you. On the other hand, staying too controversial for too long would get you banned or canceled.
