fix(blog): move stuff to public

--- a/src/pages/projects/twister.mdx
+++ b/src/pages/projects/twister.mdx
@@ -95,7 +95,7 @@ To make the game more interactive, I added **AI-generated comments**. Depending 
 I also introduced a memory system. Commenters would remember your previous tweets, so if you apologized for something, the AI could gauge whether your apology was sincere. This led to some fun interactions where a truthful apology could reduce your controversy score.
 
 <video controls class="w-full flex flex-row justify-center aspect-video">
-  <source src={import("../src/assets/blog/twister/comments.mp4")} type="video/mp4" />
+  <source src="./assets/blog/twister/comments.mp4" type="video/mp4" />
 </ video>
 
 Next, I implemented a “followers” counter to give the game a clear goal. The idea was to **survive as long as possible** by maintaining your follower count. If your tweets were too tame, people would lose interest and unfollow you. On the other hand, staying too controversial for too long would get you banned or canceled.
