fix(blog): make div with links auto wrap

--- a/src/pages/projects/ai-mariokart.mdx
+++ b/src/pages/projects/ai-mariokart.mdx
@@ -27,7 +27,7 @@ import UnorderedList from '@components/UnorderedList.astro';
 
 In this post, I’ll guide you through my journey of setting up a neural network (NN) capable of simulating **Mario Kart** gameplay, frame by frame, based on the previous frame and a steering input (left or right). This was achieved **without embedding traditional game logic into the code**. Let's dive into the inspiration, technical challenges, and final implementation of this ambitious project.
 
-<div class="text-ebony-clay-50 flex flex-row gap-1">
+<div class="text-ebony-clay-50 flex flex-wrap gap-1 w-full">
 <Shield icon="twemoji:hugging-face" url="https://huggingface.co/DereWah/diamond-mariokart64" >Model</Shield>
 <Shield icon="twemoji:hugging-face" url="https://huggingface.co/datasets/DereWah/mk64-steering" >Dataset</Shield>
 <Shield icon="mdi:github" url="https://github.com/Dere-Wah/AI-MarioKart64">Codebase</Shield>
