--- a/src/pages/projects/ai-mariokart.mdx
+++ b/src/pages/projects/ai-mariokart.mdx
@@ -5,6 +5,7 @@ date: "2024-11-18"
 description: "And how you can train basically anything with this workflow!"
 tags: ["AI", "Workflow"]
 published: true
+thumbnail: "/public/assets/blog/ai-mariokart/thumbnail.png"
 ---
 import CodeBlock from '@components/CodeBlock.astro';
 import Code from "@components/Code.astro";
