--- a/src/pages/projects/ai-shorts.mdx
+++ b/src/pages/projects/ai-shorts.mdx
@@ -5,6 +5,7 @@ date: "2024-08-27"
 description: "An automated youtube channel completely handled by AI."
 tags: ["AI", "Youtube"]
 published: true
+thumbnail: "/src/assets/blog/ai-shorts/yt_banner.jpg"
 ---
 import CodeBlock from '@components/CodeBlock.astro';
 import Code from "@components/Code.astro";
