--- a/src/pages/projects/spotify-bot.mdx
+++ b/src/pages/projects/spotify-bot.mdx
@@ -5,6 +5,7 @@ date: "2024-08-31"
 description: "There's a chance you're followed by one of these accounts on Spotify."
 tags: ["Spotify", "Bots"]
 published: true
+thumbnail: "/src/assets/blog/spotify-bot/profile.png"
 ---
 import CodeBlock from '@components/CodeBlock.astro';
 import Code from "@components/Code.astro";
