--- a/src/pages/projects/spyfall.mdx
+++ b/src/pages/projects/spyfall.mdx
@@ -5,6 +5,7 @@ date: "2024-09-07"
 description: "Creating a webapp for the social deduction game SpyFall."
 tags: ["Web Dev", "Game Dev"]
 published: true
+thumbnail: "/src/assets/blog/spyfall/left.png"
 ---
 import CodeBlock from '@components/CodeBlock.astro';
 import Code from "@components/Code.astro";
