--- a/src/pages/projects/twister.mdx
+++ b/src/pages/projects/twister.mdx
@@ -5,6 +5,7 @@ date: "2024-10-24"
 description: "A devlog about the first game jam I ever took place in (Brackeys Game Jam 2024.2)."
 tags: ["AI", "Game Dev"]
 published: true
+thumbnail: "/src/assets/blog/twister/penguinz1.png"
 ---
 import CodeBlock from '@components/CodeBlock.astro';
 import Code from "@components/Code.astro";
